Version 3.0 (PreZ <prez@antisocial.com>)
-----------

1997/15/09 .0	Services now respawn if /kill'd
		Message to users when logon added
		Disabled @* (and @*.*, etc) AKILLS except for SOPS
		Disabled @* (and @*.*, etc) AKICKS except for Level 20's
		Created FILE_VERSION 3 (autoconverts from 2)
		Added NickServ URL and EMAIL fields (v3)
		Added ChanServ URL field (v3)
		Added NEWS system (Basically Channel MEMO's)
		Added IRC Operator NickServ flag (no nick expiry)
		Added ChanServ level 20 (can set all but PASS and FOUNDER)
		Added CURRENT TIME to info displays

Version 2.2 (Alcan <achurch@dragonfire.net>
-----------

1997/08/23 .26	Fixed a minor bug in the configure script which caused
		    compilation errors on systems without strerror().
1997/08/21 .25	Fixed a stupid bug in introduce_user() w.r.t. classic ircd.
1997/08/08 .24	Kludged around duplicate QUIT syndrome of Undernet ircd.
1997/08/06	Added multi-server support to introduce_user().
1997/07/24 .23	Fixed user leak caused by autokills.
1997/07/20 .22	Fixed crashes in ChanServ CLEAR {OPS|VOICES}.
1997/07/19	Added ALL option to OperServ STATS command to display
		    Services memory usage.
1997/07/??	Added initial support for different IRC servers.
1997/07/15	Removed remaining occurrences of #define'd parameters
		    (SERVER_NAME, etc.) and replaced them with runtime
		    variables.
1997/07/15	Added "Topic set by" field to ChanServ INFO command.
1997/07/07 .21	Fixed bug in ChanServ CLEAR USERS command causing crashes.
1997/07/02 .20	Removed last vestiges of domain dependence (global notice
		    and MOTD).
1997/07/02	Made IRC operators and Services ops immune from ChanServ
		    channel restrictions (auto-deop, AKICK, and FORBID).
1997/07/02	Made ChanServ SECURE mode actually work.
1997/06/09 .19	Added ChanServ CLEAR command.
1997/06/09	Fixed up UNBAN command (hopefully).
1997/06/05 .18	Fixed a compilation error in process.c.
1997/06/02 .17	Added workaround for servers that send a prefix with a